fixed missing background color

--- a/pricing-component-with-toggle/css/styles.css
+++ b/pricing-component-with-toggle/css/styles.css
@@ -20,8 +20,7 @@
 
 /************ General Styles  ************/
 body {
-    background-color: var(--light-grayish-blue);
-    background: url(../images/bg-top.svg);
+    background: url(../images/bg-top.svg), var(--light-grayish-blue);
     background-position: top -50px right -160px;
     background-repeat: no-repeat;
     font-family: 'Montserrat', sans-serif;
@@ -222,7 +221,7 @@ input:checked + .slider:before {
 /************ Media Queries *************/
 @media (min-width:1100px) {
   body {
-    background: url(../images/bg-top.svg), url(../images/bg-bottom.svg);
+    background: url(../images/bg-top.svg), url(../images/bg-bottom.svg), var(--light-grayish-blue);
     background-position: top -50px right -160px, bottom 50px left 0px;
     background-repeat: no-repeat;
   }
